--- a/ballot-app/package.json
+++ b/ballot-app/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "ganache-cli": "^6.4.1",
     "http-errors": "~1.6.2",
     "lite-server": "^2.4.0",
     "morgan": "~1.9.0",
